UI not designed

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -13,3 +13,4 @@
     <button type="submit" [disabled]="profileForm.invalid">Park Car</button>
   </form>
 </div>
+<app-parked-vehicles></app-parked-vehicles>
